--- a/src/css/sprint.scss
+++ b/src/css/sprint.scss
@@ -1,16 +1,39 @@
 .sprint {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-image: url("../img/mount.jpg");
+    background-size: cover;  
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #5B2C6F;
 
     &__promo {
-        font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        background-image: url("../img/monkey.svg");
+        background-size: cover;
         height: 100%;
-        background-color: rgba(255,255,255,.4);
-        backdrop-filter: blur(5px);
-        color: #5B2C6F;
+        position: fixed;
+        top: 0;
+        left: 0;
+        transition: opacity 0.1s linear;
 
+        &_container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            background-color: rgba(255,255,255,.4);
+            backdrop-filter: blur(1px);   
+        }
+
+        &-opacity {
+            opacity: 0;
+        }
+
+        &-hide {
+            display: none;
+        }
         &_header { 
             font-size: 60px;
             letter-spacing: 13px;
@@ -50,6 +73,144 @@
             &:hover {
                 background: #5B2C6F;
             }
+        }
+    }
+
+    .sprint__card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 50%;   
+
+        &_score {
+            font-size: 35px;
+            font-weight: 700;
+            color: #ffffff;
+        }
+
+        &_combo { 
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 55%;
+            margin-bottom: 30px;
+
+            &_multy {
+                font-weight: 700;
+                font-size: 25px;
+            }
+
+            &_item {
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                border: 2px solid #5B2C6F;
+            }
+        }
+
+        &-inner {
+            border: 2px solid #5B2C6F;
+            border-radius: 12px;
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(255, 255, 255, 0.95);
+            padding: 30px 0;
+            font-size: 20px;
+            box-shadow: inset 0 0 10px #5B2C6F,
+                        inset 0 0 25px #5B2C6F,
+                        inset 0 0 40px #5B2C6F;
+        }
+
+        &_buttons-container {
+            margin-top: 30px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 32%;
+
+            &-inner {
+                width: 80%;
+            }
+
+            * {
+                font-size: 15px;
+                text-align: center;
+                padding: 8px;
+                min-width: 100px;
+                background-color: #AF7AC5;
+                color: #ffffff;
+                border-radius: 5px;
+                transition: 0.3s background ease-out;
+                box-shadow: 0 2px 5px rgba(0,0,0,0.16), 0 2px 5px rgba(0,0,0,0.23);
+                border: 0;
+                cursor: pointer;
+                letter-spacing: 1px;
+                font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+                font-weight: 300;
+    
+                &:hover {
+                    background: #5B2C6F;
+                }
+            }
+        }
+
+        &_timer {
+            font-size: 15px;
+            width: 40%;
+            height: 20px;
+            border-radius: 10px;
+            background-color: rgba(255, 255, 255, 0.6);
+            margin: 10px 0;
+            border: 3px solid #5B2C6F;
+
+            * {
+                width: 20%;
+                height: 100%;
+                border-radius: 6px;
+                background-color: #AF7AC5;
+            }
+        }
+    }
+
+    &__difficult-level {
+        display: flex;
+        flex-direction: row;
+        width: 40%;
+        justify-content: space-evenly;
+        margin-bottom: 35px;
+
+        * {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            background-color: red;
+            text-align: center;
+            line-height: 30px;
+            vertical-align: middle;
+            border: 0;
+            font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+            color: #ffffff;
+            font-weight: 700;
+            font-size: 18px;
+            cursor: pointer;
+            background-color: #AF7AC5;
+            color: #ffffff;
+            transition: 0.3s background ease-out;
+            box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+
+            &:hover {
+                background: #5B2C6F;
+            }
+        }
+
+        &_item-active {
+            background: #5B2C6F;
+            cursor: default;
         }
     }
 
