--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @import './abstracts/variables';
 @import './abstracts/placeholders';
 
+@import './base/fonts';
 @import './base/base';
 
 @import './components/buttons';
