--- a/src/css/sprint.scss
+++ b/src/css/sprint.scss
@@ -16,6 +16,7 @@
         top: 0;
         left: 0;
         transition: opacity 0.1s linear;
+        z-index: 100;
 
         &_container {
             display: flex;
@@ -173,6 +174,24 @@
                 height: 100%;
                 border-radius: 6px;
                 background-color: #AF7AC5;
+            }
+        }
+
+        &_loader {
+            display: block;
+            z-index: 10;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.6);
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &-hide {
+                display: none;
             }
         }
     }
