--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -10,7 +10,7 @@ html {
 }
 
 main {
-  background: url(../img/start-bg.jpg) center center no-repeat;
+  background: url(../img/nature.jpg) center center no-repeat;
   background-size: cover;
   height: 100vh;
 
@@ -21,7 +21,7 @@ main {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba($color: #000000, $alpha: 0.4);
+    background-color: rgba($color: #000000, $alpha: 0.13);
   }
 }
 
