--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -66,7 +66,7 @@
         margin-top: 6px;
         line-height: inherit;
         font-size: 1.4rem;
-        min-height: 2rem;
+        min-height: 20px;
         color: rgb(236, 29, 29);
         text-align: justify;
 
@@ -164,7 +164,7 @@
         margin-top: 6px;
         line-height: inherit;
         font-size: 1.4rem;
-        min-height: 2rem;
+        min-height: 20px;
         color: rgb(236, 29, 29);
         text-align: justify;
 
