--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -6,6 +6,12 @@
 
 @font-face {
   font-family: 'Open Sans';
+  src: url(../fonts/Open_sans/OpenSans-SemiBold.ttf);
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Open Sans';
   src: url(../fonts/Open_sans/OpenSans-Bold.ttf);
   font-weight: 700;
 }
