--- a/src/css/sprint.scss
+++ b/src/css/sprint.scss
@@ -167,6 +167,25 @@
                         inset 0 0 40px #5B2C6F;
         }
 
+        &_errors { 
+            width: 70%;
+            height: 50px;
+        }
+
+        &_wrong-answer {
+            width: 48px;
+            height: 48px;
+            margin-top: 5px;
+            background: url("../img/wrong.png") no-repeat center center;
+            background-size: cover;
+            opacity: 1;
+            transition: opacity 0.2s ease-out;
+
+            &-hidden {
+                opacity: 0;
+            }
+        }
+
         &_buttons-container {
             margin-top: 30px;
             display: flex;
@@ -214,7 +233,7 @@
             border: 3px solid #5B2C6F;
 
             * {
-                width: 20%;
+                width: 0%;
                 height: 100%;
                 border-radius: 6px;
                 background-color: #AF7AC5;
@@ -249,14 +268,18 @@
             * {
                 width: 50px;
                 height: 50px;
-                background: url("../img/forward.png") no-repeat center center;
-                background-size: cover;
+                border-radius: 5px;
             }
         }
 
         &-arrow-left {
-            transform: rotate(180deg);
+            background: url("../img/left.png") no-repeat center center;
+            background-size: cover;
+        }
+
+        &-arrow-right {
+            background: url("../img/right.png") no-repeat center center;
+            background-size: cover; 
         }
     }
-
 }
