--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,39 @@
     margin: 0;
     text-decoration: none;
     }
+body{
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: violet;
+    color: white;
+}
+.main{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.start-screen{
+    width: 80%;
+    height: 50vh;
+    text-align: center;
+}
+h1{
+   font-size: 50px; 
+   padding: 50px 0px;
+}
+.start-btn{
+    width: 60%;
+    max-width: 400px;
+    height: 50px;
+    background-color: white;
+    border-radius: 20px;
+    margin: 0px auto;
+    color: black;
+    text-transform: uppercase;
+    font-size: 30px;
+    padding-top: 15px;
+}
+.start-btn:hover{
+    background-color: rgb(206, 170, 240);
+    cursor: pointer;
+}
