--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4,7 +4,7 @@ $first_color: rgba(241, 240, 203, 0.4);
 $second_color: rgb(253, 253, 244);
 $third_color: rgba(2, 91, 126, 0.8);
 $card_text_color: rgb(91, 113, 149);
-$green_color :rgba(35, 223, 119, 0.85);
+$green_color: rgba(35, 223, 119, 0.85);
 $fourth_color: rgba(1, 75, 104, 0.8);
 $button_background: rgba(202, 235, 216, 0.4);
 $wrong_answer: rgb(218, 112, 112);
@@ -16,10 +16,20 @@ $wrong_answer: rgb(218, 112, 112);
   margin: 0;
   padding: 0;
 }
+
 body {
-  background-color: $first_color;
-  height: 100vh;
+  background: url("/../img/nature.jpg") 50% no-repeat;
+  background-size: cover;
+  height: calc(100vh - 60px);
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
+
+  .main {
+    margin-top: 60px;
+  }
+  .main__wrapper {
+    margin: 0 auto;
+    max-width: 1440px;
+  }
   .card-container {
     display: flex;
     justify-content: center;
@@ -27,7 +37,7 @@ body {
     .card {
       min-width: 550px;
       max-width: 600px;
-
+      min-height: 600px;
       .card__wrapper {
         border-radius: 8px;
         background-color: $second_color;
@@ -40,24 +50,26 @@ body {
       .card__image {
         display: flex;
         justify-content: center;
-      
-      .card__img {
-        border-radius: 8px;
+
+        .card__img {
+          border-radius: 8px;
+          height: 260px;
+          width: 390px;
+        }
       }
-    }
       .card__main {
         display: flex;
         flex-direction: column;
         margin: 20px 0;
+        padding: 0 30px;
       }
       .card__input-container {
-          display: flex;
-          position: relative;
-          width: fit-content; 
-          margin: 10px auto;
+        display: flex;
+        position: relative;
+        width: fit-content;
+        margin: 10px auto;
       }
       .card__input {
-        
         border: none;
         background-color: $blue_color_for_input;
         width: 0px;
@@ -65,32 +77,41 @@ body {
         font-size: 2.1rem;
         font-family: "Inconsolata", monospace;
         padding: 0 8px;
-        
+
         outline: none;
         color: $fourth_color;
       }
       .card__word {
         display: flex;
         justify-content: space-between;
-        
-        
 
         .card__word-translate,
         .card__transcription {
           font-weight: 700;
-          font-size: 1.75rem;
-          
+          font-size: 1.5rem;
+
           color: $fourth_color;
         }
       }
 
       .card__buttons {
         margin-top: 20px;
+        .card__main-buttons {
+          display: flex;
+          justify-content: center;
+        }
+      .card__difficulty-buttons {
         display: flex;
         justify-content: center;
-        .card__hard-word-btn,
+        margin-top: 20px;
+      }
+        .card__check-word-btn,
         .card__skip-word-btn,
-        .card__delete-word-btn {
+        .card__hard-word-btn,
+        .card__delete-word-btn,
+        .card__easy-word-btn,
+        .card__repeat-word-btn
+         {
           outline: none;
           user-select: none;
           background-color: $button_background;
@@ -112,7 +133,7 @@ body {
           }
           &:hover:before {
             left: 250px;
-            transition: .5s ease-in-out;
+            transition: 0.5s ease-in-out;
           }
           &:before {
             content: "";
@@ -141,49 +162,46 @@ body {
       .card__additional-info {
         display: flex;
         flex-direction: column;
-        
       }
-      
+
       .card__explain,
       .card__word-expample {
         margin-top: 10px;
-        font-size: 1.12rem;
+        font-size: 1rem;
         font-weight: 400;
         color: $card_text_color;
       }
     }
 
     .answer {
-        position: absolute;
-        top: 0;
-        left: 0;
-        height: 100%;
-        padding: 0 8px;
-        vertical-align: middle;
-        display: flex;
-        align-items: center;
-        opacity: 1;
-        transition-duration: 0.5s;
-        span {
-            font-family: "Inconsolata", monospace;
-            font-size: 2.1rem;
-            transition-duration: 1s;
-            transition-delay: 1s;
-            
-        }
-        .correct {
-            color: $green_color;
-            
-        }
-        .wrong {
-            color: red;
-        }
-        .default {
-            color: $blue_color;
-        }
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      padding: 0 8px;
+      vertical-align: middle;
+      display: flex;
+      align-items: center;
+      opacity: 1;
+      transition-duration: 0.5s;
+      span {
+        font-family: "Inconsolata", monospace;
+        font-size: 2.1rem;
+        transition-duration: 1s;
+        transition-delay: 1s;
+      }
+      .correct {
+        color: $green_color;
+      }
+      .wrong {
+        color: red;
+      }
+      .default {
+        color: $blue_color;
+      }
     }
     .answer--remove {
-        opacity: 0;
+      opacity: 0;
     }
     .navigate {
       display: flex;
