feat: add styles for cards' translate fields

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -165,7 +165,9 @@ body {
       }
 
       .card__explain,
-      .card__word-expample {
+      .card__word-example,
+      .card__word-example-translate,
+      .card__explain-translate {
         margin-top: 10px;
         font-size: 1rem;
         font-weight: 400;
