--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,7 +16,9 @@ $wrong_answer: rgb(218, 112, 112);
   margin: 0;
   padding: 0;
 }
-
+html {
+  font-size: 16px;
+}
 body {
   background: url("/../img/nature.jpg") 50% no-repeat;
   background-size: cover;
@@ -35,16 +37,14 @@ body {
     justify-content: center;
 
     .card {
-      width: 500px;
-      min-height: 600px;
+      width: 550px;
+      // min-height: 600px;
       
       .card__wrapper {
         display: flex;
         flex-direction: column;
-        align-items: center;
         padding: 0 20px;
         border-radius: 8px;
-
         background-color: $second_color;
         -webkit-box-shadow: 0px 0px 15px 3px $blue_color;
         -moz-box-shadow: 0px 0px 15px 3px $blue_color;
@@ -83,7 +83,7 @@ body {
         .card__img {
           border-radius: 8px;
           height: 240px;
-          width: 370px;
+          width: 400px;
         }
       }
       .card__main {
@@ -91,7 +91,7 @@ body {
         flex-direction: column;
         margin-bottom: 20px;
         padding: 0 20px;
-        width: 500px;
+        
       }
       .card__input-container {
         display: flex;
@@ -118,7 +118,7 @@ body {
         .card__word-translate,
         .card__transcription {
           font-weight: 700;
-          font-size: 1.2rem;
+          font-size: 1.5rem;
           margin-right: 10px;
           color: $fourth_color;
         }
@@ -199,7 +199,7 @@ body {
       .card__word-example-translate,
       .card__explain-translate {
         margin-top: 10px;
-        font-size: 0.8rem;
+        font-size: 1rem;
         font-weight: 400;
         color: $card_text_color;
       }
@@ -283,7 +283,7 @@ body {
     width: 600px;
    
     position: absolute;
-    bottom: 33px;
+    bottom: 100px;
     left: 50%;
     margin-left: -300px; 
     height: 20px;
@@ -292,7 +292,7 @@ body {
     .progress__row {
       width: 90%;
       border-radius: 8px;
-      background-color: rgba(128, 128, 128, 0.6);
+      background-color: rgba(128, 128, 128, 0.7);
       height: 100%;
       .progress__current {
         height: 100%;
