--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -54,7 +54,8 @@ body {
 
       .card__header {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
+        align-items: center;
         width: 100%;
         margin-top: 15px;
         margin-bottom: 10px;
@@ -278,6 +279,12 @@ body {
   .visability-hidden {
     visibility: hidden;
   }
+  .display-none {
+    display: none;
+  }
+  .set-opacity {
+    opacity: 0;
+  }
 
   .progress {
     width: 600px;
@@ -289,18 +296,147 @@ body {
     height: 20px;
     display: flex;
     justify-content: space-between;
+    .progress__start-value,
+    .progress__end-value {
+      color: rgb(223, 191, 9);
+      font-size: 1rem;
+      font-weight: bold;
+      
+    }
     .progress__row {
       width: 90%;
       border-radius: 8px;
-      background-color: rgba(128, 128, 128, 0.7);
+      background-color: rgba(240, 230, 140, 0.5);
       height: 100%;
       .progress__current {
         height: 100%;
         width: 0%;
-        background-color: green;
+        background-color: $green_color;
         border-radius: 8px;
         transition: 0.5s;
       }
     }
   }
+
+.card__translate-switcher {
+  display: flex;
+  align-items: center;
+  p {
+    margin-right: 10px;
+  }
+  .flip-switch {
+    display: block;
+    perspective: 50px;
+    border-radius: 50px;
+
+    input {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      right: 100%;
+      width: 1px;
+      height: 1px;
+    }
+    
+    label {
+      display: block;
+      position: relative;
+      height: 28px;
+      width: 48px;
+      outline: none;
+      margin: 0 auto;
+      -webkit-appearance: none;
+      background: none;
+      border: none;
+      transform-style: preserve-3d;
+      border-radius: inherit;
+      animation: uncheck 0.6s ease-out;
+      box-shadow: none;
+     
+      &:before, &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: inherit;
+        width: inherit;
+        backface-visibility: hidden;
+        border-radius: inherit;
+        text-align: center;
+      }
+      
+      &:before {
+        z-index: 2;
+        transform: rotateY(0deg);
+        background: #E65757;
+      }
+  
+      &:after {
+        transform: rotateY(180deg);
+        background: #77E371;
+      }
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    
+    input:checked + label {
+      transform: rotateY(180deg);
+      animation: check 0.6s ease-out;
+    }
+
+    &.flip-switch-text {
+      label {
+  
+        &:before, &:after {
+          color: white;
+          line-height: 28px;
+          font-weight: 900;
+          font-size: 1rem;
+        }
+        
+        &:before {
+          content: 'OFF';
+        }
+        
+        &:after {
+          content: 'ON';
+        }
+  
+      }
+    }
+    }
+    
+  }
+  
+  @keyframes check {
+    0% {
+      transform: rotateY(0deg);
+    }
+    50% {
+      transform: rotateY(195deg);
+    }
+    75% {
+      transform: rotateY(165deg);
+    }
+    100% {
+      transform: rotateY(180deg);
+    }
+  }
+    
+  @keyframes uncheck {
+    0% {
+      transform: rotateY(180deg);
+    }
+    50% {
+      transform: rotateY(-15deg);
+    }
+    75% {
+      transform: rotateY(15deg);
+    }
+    100% {
+      transform: rotateY(0deg);
+    }
+  }
+
 }
