--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,14 @@ h1{
     background-color: rgb(206, 170, 240);
     cursor: pointer;
 }
+.indicator{
+    position: absolute;
+    width: 10%;
+    height: 5px;
+    background-color: white;
+    top: 0%;
+    left: 0%;
+}
 .words{
    display: flex;  
    flex-wrap: wrap;
@@ -52,6 +60,10 @@ h1{
     padding-left: 20px;
     padding-bottom: 20px;
     text-transform: lowercase;
+}
+.words div:hover{
+    cursor: pointer;
+    opacity: 0.5;
 }
 .dont-known-btn{
    border: 1px solid white;
@@ -75,4 +87,11 @@ h1{
 .sound-img:hover{
     cursor: pointer;
     background: url('img/sound-on.png') no-repeat;
+}
+.right{
+    opacity: 1;
+}
+.eng-word{
+    font-size: 50px;
+    padding-top: 40px;
 }
