--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,7 @@ h1{
    flex-wrap: wrap;
    justify-content: center;
    padding-top: 50px;
-   padding-bottom: 100px;
+   padding-bottom: 20px;
    font-size: 20px;
 }
 .words div{
@@ -65,6 +65,10 @@ h1{
     cursor: pointer;
     opacity: 0.5;
 }
+.result{
+    font-size: 24px;
+    padding-bottom: 70px;
+}
 .dont-known-btn{
    border: 1px solid white;
    width: 200px;
@@ -73,6 +77,7 @@ h1{
    padding: 10px 20px;
    margin: 0px auto;
    opacity: 0.5;
+   height: 25px;
 }
 .dont-known-btn:hover{
     cursor: pointer;
