--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,27 @@ h1{
    font-size: 50px; 
    padding: 50px 0px;
 }
+h2{
+    font-size: 30px; 
+    padding: 5px 0px; 
+}
+h3{
+    padding-bottom: 20px;
+}
+.level-block{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.level-block div{
+    font-size: 28px;
+    padding: 0px 5px;
+    opacity: 0.75;
+}
+.level-block div:hover{
+    cursor: pointer;
+    opacity: 1;
+}
 .start-btn{
     width: 60%;
     max-width: 400px;
