--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,5 @@
+@import '../../node_modules/normalize-scss/sass/normalize';
+
 @import './abstracts/mixins';
 @import './abstracts/variables';
 @import './abstracts/placeholders';
