--- a/src/style.css
+++ b/src/style.css
@@ -6,14 +6,15 @@
     }
 body{
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: violet;
     color: white;
 }
 .main{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: url('img/background.jpg');
+    background-size: cover;
 }
 .start-screen{
     width: 80%;
@@ -22,10 +23,9 @@ body{
 }
 h1{
    font-size: 50px; 
-   padding: 50px 0px;
 }
 h2{
-    font-size: 30px; 
+    font-size: 24px; 
     padding: 5px 0px; 
 }
 h3{
@@ -35,15 +35,26 @@ h3{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 15px;
+    width: 170px;
+    margin: 0px auto;
 }
 .level-block div{
-    font-size: 28px;
+    font-size: 22px;
     padding: 0px 5px;
-    opacity: 0.75;
+    opacity: 0.5;
+    border-radius: 5px;
+    margin: 2px;
+    border: 1px solid white;
+}
+.level-block .active{
+    border: 1px solid white;
+    opacity: 1;
 }
 .level-block div:hover{
     cursor: pointer;
     opacity: 1;
+    border: 1px solid white;
 }
 .start-btn{
     width: 60%;
@@ -58,16 +69,25 @@ h3{
     padding-top: 15px;
 }
 .start-btn:hover{
-    background-color: rgb(206, 170, 240);
+    background-color: rgb(163, 224, 199);
     cursor: pointer;
 }
 .indicator{
-    position: absolute;
     width: 10%;
-    height: 5px;
+    height: 10px;
     background-color: white;
     top: 0%;
     left: 0%;
+    border-radius: 5px;
+}
+.indicatorBlock{
+    width: 100%;
+    height: 10px;
+    border: 1px solid white;
+    border-radius: 10px;
+    padding: 2px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 .words{
    display: flex;  
@@ -88,7 +108,7 @@ h3{
 }
 .result{
     font-size: 24px;
-    padding-bottom: 70px;
+    padding-bottom: 50px;
 }
 .dont-known-btn{
    border: 1px solid white;
@@ -99,6 +119,7 @@ h3{
    margin: 0px auto;
    opacity: 0.5;
    height: 25px;
+   margin-bottom: 40px;
 }
 .dont-known-btn:hover{
     cursor: pointer;
