--- a/src/scss/base/_media-queries.scss
+++ b/src/scss/base/_media-queries.scss
@@ -8,19 +8,11 @@
             margin: 0 -15px;
         }
     }
-
-    .header-content {
-        flex-direction: column;
-    }
-
-    .nav {
-        width: 100%;
-    }
-
 }
 
 
 @media screen and (max-width: 680px) {
+        
     .app-intro-options {
         .column-layout-12 {
             width: 100%;
@@ -41,12 +33,19 @@
         }
     }
 
+    .header {
+        padding: 0;
+        &__nav {
+            order: -1;
+        }
+    }
+
     .nav-menu {
         position  : absolute;
-        top       : 162px;
-        left      : -90%;
+        top       : 87px;
+        left      : -60%;
         height    : 100vh;
-        width     : 90%;
+        width     : 60%;
         background: linear-gradient(135deg, #ff4b1f, #1fddff);
         transition: left 0.5s cubic-bezier(0.1, 0.1, 0.25, 1.0);
         z-index   : 3;
@@ -63,6 +62,7 @@
 
     .btn-container {
         display: block;
+        text-align: start;
     }
 
     .nav-bar {
