--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -32,6 +32,7 @@ $text-error: rgb(236, 29, 29);
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 
   &__new-words-quantity,
   &__cards-quantity {
@@ -243,5 +244,58 @@ $text-error: rgb(236, 29, 29);
       &:after {
         content:"Применить";
       }
+  }
+
+  &__submit-loading {
+    width: 40px;
+    border-color: $text-dark;
+    border-width: 3px;
+    font-size: 0;
+    border-left-color: $button-bg-normal;
+    animation: rotating 2s 0.25s linear infinite;
+  
+    &:after {
+      content: "";
+    }
+    &:hover {
+      color: $button-bg-hover;
+      background: $text-white;
+    }
+  }
+
+  &__submit-validate {
+    font-size: 13px;
+    color: $text-white;
+    background: $button-bg-normal;
+    &:after {
+      content:  "Ok";
+    }
+  }
+
+  &__get-indicator {
+    z-index: 100;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(3px);
+
+    &_spinner {
+      background-color: transparent;
+    }
+  }
+}
+
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
