feat: rebuild footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -19,8 +19,8 @@
         flex-basis: 50%;
         flex-grow:1;
     }
-    .team-github-info {
-        padding-left: 20%;
+    .course-logo {
+        text-align: end;
     }
     .gh-teammate-info {
         padding: 10px 0;
