fix: fix font size for button

--- a/src/scss/layout/_start-offer-section.scss
+++ b/src/scss/layout/_start-offer-section.scss
@@ -25,7 +25,7 @@
     min-width       : 90px;
     line-height     : 3.5;
     text-align      : center;
-    font-size       : 1.5rem;
+    font-size       : 15px;
     border-radius   : 8px;
     padding         : 0 10px;
     vertical-align  : middle;
