refactor: correct structure of project after merge

--- a/src/scss/intro_page/style.scss
+++ b/src/scss/intro_page/style.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/normalize-scss/sass/normalize/_import-now';
+@import '../../../node_modules/normalize-scss/sass/normalize/_import-now';
 //@import 'fonts';
 @import 'abstracts/mixins';
 @import 'abstracts/variables';
