--- a/src/scss/authorization_page/base/_base.scss
+++ b/src/scss/authorization_page/base/_base.scss
@@ -1,3 +1,5 @@
+
+/*
 html {
   font-size: 10px;  
   font-family: 'Open Sans', sans-serif;
@@ -11,6 +13,7 @@ html {
   padding: 0;
   outline: none;
 }
+*/
 
 main {
   background: url(../../assets/images/nature.jpg) center center no-repeat;
@@ -28,9 +31,6 @@ main {
   }
 }
 
-.wrapper {
-  padding: 0 50px;
-}
 
 .hide {
   display: none !important;
