--- a/src/scss/intro_page/layout/_start-offer-section.scss
+++ b/src/scss/intro_page/layout/_start-offer-section.scss
@@ -33,8 +33,8 @@
     margin          : 15px 0;
     background-color: complement($color: rgb(137, 195, 214));
 
-    &:hover {
-        transform : scale(1.2);
-        transition: transform 0.2s ease-in-out 0.1s;
+    &:active {
+        
+        transform : scale(0.9);
     }
 }
