--- a/src/scss/puzzle/components/_buttons.scss
+++ b/src/scss/puzzle/components/_buttons.scss
@@ -85,7 +85,7 @@
   margin: 0 10px;
 }
 
-.footer__button {
+.puzzle-footer__button {
   @include text(2rem, 1, $text-dark, 700);
   margin: 0 10px;
   padding: 5px;
