--- a/src/scss/puzzle/main.scss
+++ b/src/scss/puzzle/main.scss
@@ -9,7 +9,7 @@
 
 @import './layouts/start-screen';
 @import './layouts/puzzle-main-page';
-@import './layouts/footer';
+@import './layouts/puzzle-footer';
 @import './layouts/result-page';
 
 @import './components/buttons';
